--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/HandmanServ?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
