--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 group = 'de.gtwsp21'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
 	mavenCentral()
