--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/HandmanServ?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=false
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
