--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=
 
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=false
 spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
-spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=none
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
