--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ repositories {
 }
 
 dependencies {
+
+	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
+	
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
