--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,12 @@ spring.datasource.password=
 
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=false
 spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.javax.persistence.schema-generation.scripts.action=none
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+
+spring.mail.host=localhost
+spring.mail.port=25
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.ssl.enable=false
