hot swapping bei html seiten eingeschalten

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.ssl.enable=false
 
 #logging.level.org.springframework=DEBUG
+
+spring.thymeleaf.cache=false
