heroku fehler, kein main attribute

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,14 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'de.gtwsp21.handmanserv.HandmanServApplication'
+        )
+    }
+}
+
 test {
 	useJUnitPlatform()
 }
