--- a/build.gradle
+++ b/build.gradle
@@ -13,22 +13,23 @@ repositories {
 	mavenCentral()
 }
 
+
 dependencies {
 
-	implementation 'javax.validation:validation-api:2.0.1.Final'
-	implementation 'org.apache.commons:commons-lang3:3.12.0'
+	compile 'javax.validation:validation-api:2.0.1.Final'
+	compile 'org.apache.commons:commons-lang3:3.12.0'
 	
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
-	implementation 'org.flywaydb:flyway-core'
-	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'org.springframework.boot:spring-boot-starter-mail'
+	compile 'org.springframework.boot:spring-boot-starter-security'
+	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	compile 'org.springframework.boot:spring-boot-starter-validation'
+	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
+	compile 'org.flywaydb:flyway-core'
+	compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	testCompile 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
 
