--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,7 @@ dependencies {
 
 springBoot {
 	mainClass = 'de.gtwsp21.handmanserv.HandmanServApplication'
-}
-
-bootWar {
-	classpath configurations.developmentOnly
+    executable = true 
 }
 
 task stage(dependsOn: ['build', 'clean']){
