--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,12 @@ springBoot {
 	mainClass = 'de.gtwsp21.handmanserv.HandmanServApplication'
 }
 
-bootJar {
-	manifest {
-		attributes 'Start-Class': 'de.gtwsp21.handmanserv.HandmanServApplication'
-		attributes 'Main-Class': 'de.gtwsp21.handmanserv.HandmanServApplication'
-	}
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'de.gtwsp21.handmanserv.HandmanServApplication'
+        )
+    }
 }
 
 task stage(dependsOn: ['build', 'clean']){
