--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/HandmanServ?createDatabaseIf
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.jpa.hibernate.naming.physical-strategy=de.gtwsp21.handmanserv.init.LinuxNamingStrategy
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+
+
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=false
 spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
