Anpassungen für Linux Systeme (Heruko)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/HandmanServ?createDatabaseIf
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.hibernate.naming.physical-strategy=de.gtwsp21.handmanserv.init.LinuxNamingStrategy
-spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-
+#spring.jpa.hibernate.naming.physical-strategy=de.gtwsp21.handmanserv.init.LinuxNamingStrategy
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.show-sql=true
 
 spring.jpa.properties.javax.persistence.schema-generation.create-database-schemas=false
 spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
@@ -20,4 +20,4 @@ spring.mail.properties.mail.smtp.ssl.enable=false
 
 #logging.level.org.springframework=DEBUG
 
-spring.thymeleaf.cache=false
+#spring.thymeleaf.cache=false
