Benutzer werden im Testmodus nun sofort freigeschalten und aktiviert

--- a/src/main/resources/application-heroku.properties
+++ b/src/main/resources/application-heroku.properties
@@ -10,3 +10,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
 #logging.level.org.springframework=DEBUG
+
+testmodus=true
