--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 spring.mail.properties.mail.smtp.ssl.enable=false
 
+## wird für den e-Mailversand benötigt
+#testmodus=true
+
 #logging.level.org.springframework=DEBUG
 
 #spring.thymeleaf.cache=false
